syntax = "proto3";

package calculator;
option go_package="./calculator/calculatorpb";

message Calculating {
    int32 first_number = 1;
    int32 second_number = 2;
}

message SumRequest {
    Calculating calculating = 1;
}

message SumResponse {
    int32 sum_result = 1;
}

message NumberRequest {
    int64 number = 1;
}

message NumberResponse {
    float result = 1;
}

service CalculatorService {
    // unary
    rpc Sum(SumRequest) returns (SumResponse) {};

    // server streaming case study
    rpc PrimeNumberDecomposition(NumberRequest) returns (stream NumberResponse) {};

    // client streaming case study
    rpc ComputeAverage(stream NumberRequest) returns (NumberResponse) {};

    // bi directional streaming case study
    rpc FindMaximum(stream NumberRequest) returns (stream NumberResponse) {};
}
